--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -8,8 +8,21 @@
         user: vagrant
         key: "{{ lookup('file', lookup('env', 'HOME') + '/.ssh/vagrant-k8s-experiments.pub') }}"
         exclusive: true
-    - name: "Obtain kubernetes apt gpg key"
-      ansible.builtin.get_url:
-        url: "https://packages.cloud.google.com/apt/doc/apt-key.gpg"
-        dest: "/usr/share/keyrings/kubernetes-archive-keyring.gpg"
-        mode: 0644
+    - name: Setup Kubernetes APT repository
+      block:
+        - name: "Obtain Kubernetes apt gpg key"
+          ansible.builtin.get_url:
+            url: "https://packages.cloud.google.com/apt/doc/apt-key.gpg"
+            dest: "/usr/share/keyrings/kubernetes-archive-keyring.gpg"
+            mode: 0644
+        - name: "Add Kubernetes repository to APT"
+          ansible.builtin.apt_repository:
+            # Why no focal?
+            repo: "deb [signed-by=/usr/share/keyrings/kubernetes-archive-keyring.gpg] https://apt.kubernetes.io/ kubernetes-xenial main"
+            filename: kubernetes
+    - name: Install kubernetes components
+      ansible.builtin.apt:
+        name:
+          - kubeadm
+          - kubelet
+          - kubectl
