added conditions to avoid running GPG key setup always

--- a/ansible/roles/common/tasks/main.yml
+++ b/ansible/roles/common/tasks/main.yml
@@ -31,3 +31,6 @@
       - kubectl=*{{ kube_major_version }}*
       - cri-o
       - cri-o-runc
+- name: Disable Swap
+  ansible.builtin.include_tasks:
+    file: "disable-swap.yml"
