--- a/ansible/roles/common/tasks/cri-o.yml
+++ b/ansible/roles/common/tasks/cri-o.yml
@@ -1,23 +1,43 @@
 ---
-- name: "Download CRI-O key libcontainers-archive-keyring"
-  ansible.builtin.get_url:
-    url: "https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable/{{ cri_o_os }}/Release.key"
-    dest: "/tmp/libcontainers-archive-keyring.asc"
-    mode: 0644
-- name: "Dearmor CRI-O key libcontainers-archive-keyring"
-  ansible.builtin.command: "gpg --dearmor -o /usr/share/keyrings/libcontainers-archive-keyring.gpg /tmp/libcontainers-archive-keyring.asc"
+- name: Check if libcontainers-archive-keyring is present
+  ansible.builtin.stat:
+    path: /usr/share/keyrings/libcontainers-archive-keyring.gpg
+  register: is_archive_keyring_present
+- name: "Setup CRI-O libcontainers-archive-keyring"
+  when: not is_archive_keyring_present.stat.exists
+  block:
+    - name: Download CRI-O key libcontainers-archive-keyring
+      ansible.builtin.get_url:
+        url: "https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable/{{ cri_o_os }}/Release.key"
+        dest: "/tmp/libcontainers-archive-keyring.asc"
+        mode: 0644
+    - name: "Dearmor CRI-O key libcontainers-archive-keyring"
+      ansible.builtin.command: "gpg --dearmor -o /usr/share/keyrings/libcontainers-archive-keyring.gpg /tmp/libcontainers-archive-keyring.asc"
+      args:
+        creates: /usr/share/keyrings/libcontainers-archive-keyring.gpg
+
 - name: "Add CRI-O APT repository devel:kubic:libcontainers:stable"
   ansible.builtin.apt_repository:
-    # Why no focal?
     repo: "deb [signed-by=/usr/share/keyrings/libcontainers-archive-keyring.gpg] https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable/{{ cri_o_os }}// /"
     filename: devel:kubic:libcontainers:stable
-- name: "Download CRI-O key libcontainers-archive-keyring"
-  ansible.builtin.get_url:
-    url: "https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable:/cri-o:/{{ kube_major_version }}/{{ cri_o_os }}/Release.key"
-    dest: "/tmp/libcontainers-crio-archive-keyring.asc"
-    mode: 0644
-- name: "Dearmor CRI-O key libcontainers-crio-archive-keyring"
-  ansible.builtin.command: "gpg --dearmor -o /usr/share/keyrings/libcontainers-crio-archive-keyring.gpg /tmp/libcontainers-crio-archive-keyring.asc"
+
+- name: Check if libcontainers-crio-archive-keyring is present
+  ansible.builtin.stat:
+    path: /usr/share/keyrings/libcontainers-crio-archive-keyring.gpg
+  register: is_archive_crio_keyring_present
+- name: "Setup CRI-O libcontainers-crio-archive-keyring"
+  when: not is_archive_crio_keyring_present.stat.exists
+  block:
+    - name: "Download CRI-O key libcontainers-crio-archive-keyring"
+      ansible.builtin.get_url:
+        url: "https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable:/cri-o:/{{ kube_major_version }}/{{ cri_o_os }}/Release.key"
+        dest: "/tmp/libcontainers-crio-archive-keyring.asc"
+        mode: 0644
+    - name: "Dearmor CRI-O key libcontainers-crio-archive-keyring"
+      ansible.builtin.command: "gpg --dearmor -o /usr/share/keyrings/libcontainers-crio-archive-keyring.gpg /tmp/libcontainers-crio-archive-keyring.asc"
+      args:
+        creates: /usr/share/keyrings/libcontainers-crio-archive-keyring.gpg
+
 - name: "Add CRI-O APT repository devel:kubic:libcontainers:stable:cri-o:{{ kube_major_version }}"
   ansible.builtin.apt_repository:
     repo: "deb [signed-by=/usr/share/keyrings/libcontainers-crio-archive-keyring.gpg] https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable:/cri-o:/{{ kube_major_version }}/{{ cri_o_os }}/ /"
