--- a/ansible/roles/control/tasks/main.yml
+++ b/ansible/roles/control/tasks/main.yml
@@ -1,13 +1,13 @@
 ---
 - name: "Initialize control plane node"
-  ansible.builtin.shell:
+  ansible.builtin.command:
   args:
     cmd: "kubeadm init --node-name {{ ansible_hostname }} --pod-network-cidr=10.244.0.0/16"
     creates: /etc/kubernetes/manifests/*
   register: kube_init
-- name: "Show kubeadm init output"
-  ansible.builtin.debug:
-    var: kube_init.stdout_lines
+- name: "Grab kubeconfig"
+  ansible.builtin.import_tasks:
+    file: "kubeconfig.yml"
 - name: "Install Flannel CNI"
   ansible.builtin.import_tasks:
     file: "flannel.yml"
