Start groundwork to use non-default NIC
Not really Parallels specific, i.e. wanted to do this on Hyper-V, but since it was faster to get here than with Hyper-V, will start getting it not use the default NIC. Was hoping to not need it, but seems DHCP on this version of Parallels behave funny, i.e. I have duplicate IP assignments

--- a/ansible/roles/control/tasks/main.yml
+++ b/ansible/roles/control/tasks/main.yml
@@ -2,7 +2,11 @@
 - name: "Initialize control plane node"
   ansible.builtin.command:
   args:
-    cmd: "kubeadm init --node-name {{ ansible_hostname }} --pod-network-cidr=10.244.0.0/16"
+    cmd: >-
+      kubeadm init
+      --apiserver-advertise-address {{ advertise_ip }}
+      --node-name {{ ansible_hostname }}
+      --pod-network-cidr=10.244.0.0/16
     creates: /etc/kubernetes/manifests/*
   register: kube_init
 - name: "Fetch admin kubeconfig form control node"
