add port forwarding, start updates to use pkg.k8s.io

--- a/ansible/roles/common/defaults/main.yml
+++ b/ansible/roles/common/defaults/main.yml
@@ -1,4 +1,3 @@
 ---
-kube_major_version: '1.25'
-kube_pkg_version: 1.25.5-00
-cri_o_os: xUbuntu_20.04
+kube_major_version: '1.30'
+cri_o_major_version: '1.30'
