--- a/ansible/roles/common/tasks/redhat.yml
+++ b/ansible/roles/common/tasks/redhat.yml
@@ -1,4 +1,18 @@
 ---
+- name: Configure private interface eth1 with static ip
+  block:
+    - name: Template and copy NetworkManager Keyfile
+      ansible.builtin.template:
+        src: nm-keyfile.conf.js
+        dest: /etc/NetworkManager/system-connections/private-vagrant-interface.nmconnection
+        mode: "0644"
+        owner: root
+        group: root
+    - name: Apply new interface config
+      ansible.builtin.command:
+        nmcli conn reload
+      changed_when: true
+
 - name: Update Packages
   ansible.builtin.dnf:
     name: "*"
