use include instead of import since i need runtime facts

--- a/ansible/roles/common/tasks/main.yml
+++ b/ansible/roles/common/tasks/main.yml
@@ -7,7 +7,7 @@
 
 
 - name: Install and Update Packages
-  ansible.builtin.import_tasks:
+  ansible.builtin.include_tasks:
     file: "{{ ansible_os_family | lower }}.yml"
 
 - name: Disable Swap
