--- a/ansible/roles/control/tasks/main.yml
+++ b/ansible/roles/control/tasks/main.yml
@@ -5,6 +5,7 @@
     cmd: >-
       kubeadm init
       --apiserver-advertise-address {{ advertise_ip }}
+      --apiserver-cert-extra-sans 127.0.0.1
       --node-name {{ ansible_hostname }}
       --pod-network-cidr=10.244.0.0/16
     creates: /etc/kubernetes/manifests/*
