add first step of using fedora
doing this out of pure laziness since crun + wasmedge for other os

--- a/ansible/roles/common/tasks/main.yml
+++ b/ansible/roles/common/tasks/main.yml
@@ -8,7 +8,7 @@
 
 - name: Install and Update Packages
   ansible.builtin.import_tasks:
-    file: "{{ (ansible_distribution == 'Ubuntu') | ternary('ubuntu.yml', 'fedora.yml') }}"
+    file: "{{ ansible_os_family | lower }}.yml"
 
 - name: Disable Swap
   ansible.builtin.import_tasks:
