--- a/ansible/roles/common/tasks/main.yml
+++ b/ansible/roles/common/tasks/main.yml
@@ -20,10 +20,7 @@
       - kubelet
       - kubectl
       - cri-o
-      - cri-o-runc
-      - cri-tools
-      - criu
-      - libyajl2
+      - crun
     allow_downgrade: true
 
 - name: Hold Kubernetes packages
