install required cni plugin binaries for flannel
apparently all this time i never actually had a working CNI...

--- a/ansible/roles/common/tasks/main.yml
+++ b/ansible/roles/common/tasks/main.yml
@@ -9,6 +9,10 @@
   ansible.builtin.include_tasks:
     file: "{{ ansible_os_family | lower }}.yml"
 
+- name: Install Flannel required binaries
+  ansible.builtin.import_tasks:
+    file: install-cni-plugin.yml
+
 - name: Enable Kernel Parameters
   ansible.builtin.import_tasks:
     file: "sysctl.yml"
