--- a/ansible/roles/control/tasks/main.yml
+++ b/ansible/roles/control/tasks/main.yml
@@ -16,6 +16,20 @@
     dest: "{{ project_kubeconfig_path }}"
     flat: true
   register: kubeconfig
+- name: "Label node as worker node as well as control"
+  become_user: "{{ lookup('env', 'USER') }}"
+  become: true
+  delegate_to: localhost
+  kubernetes.core.k8s:
+    kind: Node
+    version: v1
+    kubeconfig: "{{ project_kubeconfig_path }}"
+    state: patched
+    name: "{{ ansible_hostname }}"
+    definition:
+      metadata:
+        labels:
+          "node-role.kubernetes.io/worker": ""
 - name: "Install Flannel CNI"
   ansible.builtin.import_tasks:
     file: "flannel.yml"
