--- a/ansible/roles/common/tasks/install-cni-plugin.yml
+++ b/ansible/roles/common/tasks/install-cni-plugin.yml
@@ -18,6 +18,7 @@
   ansible.builtin.unarchive:
     src: https://github.com/containernetworking/plugins/releases/download/v1.6.0/cni-plugins-linux-{{ cni_plugin_architecture }}-v1.6.0.tgz
     dest: /opt/cni/bin
+    creates: portmap
     remote_src: true
     extra_opts:
       - --strip-components=1
