try kustomize with flannel and setting interface eth1

--- a/ansible/roles/common/tasks/main.yml
+++ b/ansible/roles/common/tasks/main.yml
@@ -19,8 +19,8 @@
 
 - name: Configure CRI-O
   ansible.builtin.copy:
-    src: crio-crun-runtime.conf
-    dest: /etc/crio/crio.conf
+    src: 50-crun-runtime.conf
+    dest: /etc/crio/crio.conf.d/
     mode: "0600"
 
 - name: Enable and Start CRI-O service
