some unsuccesffully attempts to get bridge-nf-call-iptables to persist after reboot

--- a/ansible/roles/common/tasks/sysctl.yml
+++ b/ansible/roles/common/tasks/sysctl.yml
@@ -8,6 +8,7 @@
     name: "{{ item.key }}"
     value: "{{ item.value }}"
     sysctl_set: true
+    sysctl_file: /etc/sysctl.d/99-k8s.conf
   loop: "{{ kernel_params | dict2items }}"
   vars:
     kernel_params:
