use non-privileged ports/figure out why parallels is acting weird

--- a/core-apps/zot-deployment/direct-zot-deploy-values.yaml
+++ b/core-apps/zot-deployment/direct-zot-deploy-values.yaml
@@ -10,10 +10,17 @@ configFiles:
       "extensions": { "enabled": true }
     }
 
+service:
+  type: ClusterIP
+
 ingress:
-  enabled: false
+  enabled: true
   className: nginx
   pathtype: Prefix
+  hosts:
+    - host: zot-registry.apps.vagrant-k8s-experiments.test
+      paths:
+        - path: /
 
 persistence: true
 
