--- a/core-apps/nginx/ingress-nginx-values.yaml
+++ b/core-apps/nginx/ingress-nginx-values.yaml
@@ -1,10 +1,17 @@
 controller:
   containerPort:
-    http: 8080
-    https: 8443
+    http: 80
+    https: 443
   dnsPolicy: ClusterFirstWithHostNet
   hostNetwork: true
   service:
     enabled: false
-  nodeSelector:
-    node-role.kubernetes.io/control-plane: ""
+  # nodeSelector:
+  #   node-role.kubernetes.io/control-plane: ""
+  affinity:
+    nodeAffinity:
+      requiredDuringSchedulingIgnoredDuringExecution:
+        nodeSelectorTerms:
+          - matchExpressions:
+              - key: node-role.kubernetes.io/control-plane
+                operator: Exists
