--- a/core-apps/zot-deployment/direct-zot-deploy-values.yaml
+++ b/core-apps/zot-deployment/direct-zot-deploy-values.yaml
@@ -16,6 +16,8 @@ service:
 ingress:
   enabled: true
   className: nginx
+  annotations:
+    nginx.ingress.kubernetes.io/proxy-body-size: "0"
   pathtype: Prefix
   hosts:
     - host: zot-registry.apps.vagrant-k8s-experiments.test
